fixes #221
