# refactor/data/openapi.yaml
@@ -105,6 +105,12 @@ paths:
       summary: Upload File
       description: Upload a file
       operationId: upload_file_api_v0_fs_upload_post
+        - required: false
+          schema:
+            title: Overwrite file
+            type: boolean
+          name: overwrite
+          in: query
       requestBody:
         content:
           multipart/form-data:
